# flight-tracker

./: .coveragerc  .flake8  1README.md  README.md  main.py  pyproject.toml  requirements.txt
data/: aeroplanes.json
htmlcov/: index.html
src/: abstract_api.py  aeroplane.py  api_adapter.py  file_saver.py  json_saver.py  user_interface.py
tests/: conftest.py  test_aeroplane.py  test_api_adapter.py  test_json_saver.py
