[project]
name = "flight-tracker"
version = "0.1.0"
description = "Трекер самолетов в реальном времени через OpenSky API"
authors = [
    {name = "Nikita Komissarov", email = "enclave13@yandex.ru"}
]
requires-python = ">=3.13"  # 👈 ЭТО НУЖНО ДОБАВИТЬ!
package-mode = false

dependencies = [
    "requests>=2.32.5",
    "urllib3>=2.6.3",
    "colorama>=0.4.6"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^6.3.0"
black = "^26.3.1"
isort = "^8.0.1"
flake8 = "^7.3.0"
mypy = "^1.19.1"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
    | venv
  )/
)
'''

[tool.isort]
line_length = 119
force_single_line = true
profile = "black"